--- a/package.json
+++ b/package.json
@@ -51,22 +51,22 @@
     "build-showcases": "npm run build-showcases --workspace=scripts",
     "clean": "git clean -dfx --exclude=.env",
     "codestyle": "prettier . --write",
-    "commit:updated-snapshots": "git diff --name-only --diff-filter=M | xargs git add && git commit -m 'test: updated snapshots'",
+    "commit:updated-snapshots": "git diff --name-only --diff-filter=M | xargs git add && git commit --message 'test: updated snapshots'",
     "dev": "npm run dev --workspace=scripts",
     "generate:component": "npm run generate:component --workspace=@db-ux/core-components",
     "lint": "npm-run-all --parallel lint:*",
     "lint:jscpd": "jscpd . --exitCode 1 --config .config/.jscpd.json",
-    "lint:markdownlint": "markdownlint -c .config/.markdown-lint.yml **/*.md",
+    "lint:markdownlint": "markdownlint --config .config/.markdown-lint.yml **/*.md",
     "lint:stylelint": "stylelint **/*.{css,scss}",
     "lint:xo": "xo",
     "prepare": "husky",
-    "regenerate:screenshots": "npm run build && npm run build --workspace=react-showcase && docker-compose -f ./e2e/docker-compose.regenerate.yml up",
+    "regenerate:screenshots": "npm run build && npm run build --workspace=react-showcase && docker-compose --file ./e2e/docker-compose.regenerate.yml up",
     "regenerate:screenshots:rebuild": "npm run rm:builds && node scripts/rebuild-e2e.js",
     "rm:builds": "npm run rm:builds --workspace=scripts",
     "start": "npm run start --workspace=patternhub",
     "test": "npm run test --workspace=scripts",
-    "test:react-core-components": "playwright test -c output/react/playwright.config.ts --ui",
-    "test:vue-components": "playwright test -c output/vue/playwright.config.ts --ui",
+    "test:react-core-components": "playwright test --config output/react/playwright.config.ts --ui",
+    "test:vue-components": "playwright test --config output/vue/playwright.config.ts --ui",
     "update:dependency:playwright": "node scripts/github/update-playwright.js"
   },
   "devDependencies": {
