--- a/packages/foundations/package.json
+++ b/packages/foundations/package.json
@@ -20,27 +20,27 @@
     "build:01_normalize": "npm-run-all copy-prepare:*",
     "build:02_copy": "npm run copy:scss",
     "build:03_css": "sass --no-source-map --load-path=node_modules/ --load-path=../../node_modules/ build/styles  --fatal-deprecation=mixed-decls",
-    "build:04_tailwind": "cpr tailwind build/tailwind -o",
+    "build:04_tailwind": "cpr tailwind build/tailwind --overwrite",
     "build:05_postcss": "postcss build/styles/**/*.css --replace",
     "build:05_tailwind_scss": "sass --no-source-map build/tailwind/theme --fatal-deprecation=mixed-decls",
-    "build:06_ide": "cpr ide build/ide -o",
+    "build:06_ide": "cpr ide build/ide --overwrite",
     "build:06_ts": "tsc",
-    "clean": "rm -rf build",
+    "clean": "rm --recursive --force build",
     "copy-build": "npm-run-all copy-build:*",
-    "copy-build:assets": "cpr assets ../../build-outputs/foundations/assets -o",
-    "copy-build:package.json": "cpr package.json ../../build-outputs/foundations/package.json -o",
-    "copy-build:readme": "cpr README.md ../../build-outputs/foundations/README.md -o",
-    "copy-build:web": "cpr build ../../build-outputs/foundations/build -o",
+    "copy-build:assets": "cpr assets ../../build-outputs/foundations/assets --overwrite",
+    "copy-build:package.json": "cpr package.json ../../build-outputs/foundations/package.json --overwrite",
+    "copy-build:readme": "cpr README.md ../../build-outputs/foundations/README.md --overwrite",
+    "copy-build:web": "cpr build ../../build-outputs/foundations/build --overwrite",
     "copy-prepare:icon-overview": "tsx scripts/local/generate-icon-overview.ts",
-    "copy-prepare:normalize": "cpr ../../node_modules/@csstools/normalize.css/normalize.css scss/_normalize.scss -o",
-    "copy:scss": "cpr scss build/styles -o",
+    "copy-prepare:normalize": "cpr ../../node_modules/@csstools/normalize.css/normalize.css scss/_normalize.scss --overwrite",
+    "copy:scss": "cpr scss build/styles --overwrite",
     "dev": "vite --open",
     "generate:fonts": "tsx assets/fonts/generate-eu-fonts.ts",
     "generate:icons": "tsx scripts/local/generate-icon-font.ts",
     "prebuild": "npm-run-all copy-prepare:*",
     "predev": "npm-run-all copy-prepare:*",
     "prestart": "npm-run-all copy-prepare:*",
-    "regenerate:screenshots": "npx playwright test -c ./test/playwright.config.js --update-snapshots",
+    "regenerate:screenshots": "npx playwright test --config ./test/playwright.config.js --update-snapshots",
     "start": "nodemon --config nodemon.json",
     "test:e2e": "npx playwright test --config=./test/playwright.config.js"
   },
