--- a/scripts/package.json
+++ b/scripts/package.json
@@ -36,23 +36,23 @@
     "dev:stencil-components": "npm run dev:stencil --workspace=@db-ux/core-components",
     "dev:vue-components": "npm run dev:vue --workspace=@db-ux/core-components",
     "rm-builds:components-build": "rimraf ../packages/components/build",
-    "rm-builds:dist": "rimraf -g showcases/**/dist",
+    "rm-builds:dist": "rimraf --glob showcases/**/dist",
     "rm-builds:foundations-build": "rimraf ../packages/foundations/build",
-    "rm-builds:output-dist": "rimraf -g ../output/**/dist",
-    "rm-builds:output-playwright": "rimraf -g ../output/**/playwright",
-    "rm-builds:outputs": "rimraf -g ../output/**/src",
-    "rm-builds:patternhub-out": "rimraf -g showcases/patternhub/out",
-    "rm-builds:patternhub-pages-code": "rimraf -g ../showcases/patternhub/pages/components/**/code",
-    "rm-builds:patternhub-pages-docs": "rimraf -g ../showcases/patternhub/pages/components/**/docs",
-    "rm-builds:patternhub-pages-htu": "rimraf -g ../showcases/patternhub/pages/components/**/how-to-use.mdx",
-    "rm-builds:patternhub-pages-index": "rimraf -g ../showcases/patternhub/pages/components/**/index.tsx",
-    "rm-builds:patternhub-pages-migration": "rimraf -g ../showcases/patternhub/pages/components/**/migration.mdx",
-    "rm-builds:patternhub-pages-overview": "rimraf -g ../showcases/patternhub/pages/components/**/overview.tsx",
-    "rm-builds:patternhub-pages-properties": "rimraf -g ../showcases/patternhub/pages/components/**/properties.mdx",
-    "rm-builds:patternhub-src-ts": "rimraf -g ../showcases/patternhub/components/src/**/*.ts",
-    "rm-builds:patternhub-src-tsx": "rimraf -g ../showcases/patternhub/components/src/**/*.tsx",
-    "rm-builds:playwright": "rimraf -g output/react/playwright",
-    "rm-builds:showcases-build": "rimraf -g  build-showcases/**",
+    "rm-builds:output-dist": "rimraf --glob ../output/**/dist",
+    "rm-builds:output-playwright": "rimraf --glob ../output/**/playwright",
+    "rm-builds:outputs": "rimraf --glob ../output/**/src",
+    "rm-builds:patternhub-out": "rimraf --glob showcases/patternhub/out",
+    "rm-builds:patternhub-pages-code": "rimraf --glob ../showcases/patternhub/pages/components/**/code",
+    "rm-builds:patternhub-pages-docs": "rimraf --glob ../showcases/patternhub/pages/components/**/docs",
+    "rm-builds:patternhub-pages-htu": "rimraf --glob ../showcases/patternhub/pages/components/**/how-to-use.mdx",
+    "rm-builds:patternhub-pages-index": "rimraf --glob ../showcases/patternhub/pages/components/**/index.tsx",
+    "rm-builds:patternhub-pages-migration": "rimraf --glob ../showcases/patternhub/pages/components/**/migration.mdx",
+    "rm-builds:patternhub-pages-overview": "rimraf --glob ../showcases/patternhub/pages/components/**/overview.tsx",
+    "rm-builds:patternhub-pages-properties": "rimraf --glob ../showcases/patternhub/pages/components/**/properties.mdx",
+    "rm-builds:patternhub-src-ts": "rimraf --glob ../showcases/patternhub/components/src/**/*.ts",
+    "rm-builds:patternhub-src-tsx": "rimraf --glob ../showcases/patternhub/components/src/**/*.tsx",
+    "rm-builds:playwright": "rimraf --glob output/react/playwright",
+    "rm-builds:showcases-build": "rimraf --glob  build-showcases/**",
     "rm:builds": "npm-run-all --parallel rm-builds:*",
     "start-showcase:angular": "npm run dev --workspace=angular-showcase",
     "start-showcase:angular-ssr": "npm run dev --workspace=angular-ssr-showcase",
