--- a/showcases/next-showcase/package.json
+++ b/showcases/next-showcase/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "next build",
     "dev": "npm-run-all open next:dev",
-    "next:dev": "next dev -p 5050",
+    "next:dev": "next dev --port 5050",
     "open": "open-cli http://localhost:5050/next-showcase",
     "start": "next start"
   },
