--- a/showcases/patternhub/package.json
+++ b/showcases/patternhub/package.json
@@ -13,7 +13,7 @@
     "compile:03_components": "node scripts/esbuild-generate.mjs",
     "compile:04_run": "node generated.js",
     "compile:05_test-table": "node scripts/generate-test-table.js",
-    "dev": "cross-env NEXT_PUBLIC_BASE_PATH=/core-web/sub NODE_OPTIONS='--inspect' npm-run-all compile:* -p open next:dev",
+    "dev": "cross-env NEXT_PUBLIC_BASE_PATH=/core-web/sub NODE_OPTIONS='--inspect' npm-run-all compile:* --parallel open next:dev",
     "lint": "next lint",
     "next:dev": "next dev",
     "open": "open-cli http://localhost:3000/core-web/sub",
