--- a/showcases/patternhub/.gitignore
+++ b/showcases/patternhub/.gitignore
@@ -46,7 +46,7 @@ components/code-docs/
 !components/src/tsconfig.json
 !components/component-parser
 !components/default-page.tsx
-!components/meta-navigation.tsx
+!components/index.tsx
 !components/data.ts
 !components/iframe.tsx
 !components/static-content.tsx
