--- a/output/react/package.json
+++ b/output/react/package.json
@@ -28,9 +28,9 @@
   },
   "devDependencies": {
     "@playwright/experimental-ct-react": "1.54.1",
-    "@types/react": "^18.3.13",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "@types/react": "18.3.13",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
