--- a/output/vue/package.json
+++ b/output/vue/package.json
@@ -38,13 +38,13 @@
   },
   "devDependencies": {
     "@playwright/experimental-ct-vue": "1.54.1",
-    "@vitejs/plugin-vue": "^6.0.0",
-    "replace-in-file": "^8.3.0",
-    "tsx": "^4.20.3",
-    "typescript": "^5.8.3",
-    "vite": "^6.3.5",
-    "vue": "^3.5.17",
-    "vue-tsc": "^3.0.3"
+    "@vitejs/plugin-vue": "6.0.0",
+    "replace-in-file": "8.3.0",
+    "tsx": "4.20.3",
+    "typescript": "5.8.3",
+    "vite": "6.3.5",
+    "vue": "3.5.17",
+    "vue-tsc": "3.0.3"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
