--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "19.2.15",
     "@angular/animations": "19.2.14",
-    "@angular/build": "^19.2.15",
+    "@angular/build": "19.2.15",
     "@angular/cli": "19.2.15",
     "@angular/common": "19.2.14",
     "@angular/compiler": "19.2.14",
@@ -84,65 +84,65 @@
     "@angular/platform-server": "19.2.14",
     "@angular/router": "19.2.14",
     "@angular/ssr": "19.2.15",
-    "@axe-core/playwright": "^4.10.2",
-    "@babel/eslint-parser": "^7.28.0",
+    "@axe-core/playwright": "4.10.2",
+    "@babel/eslint-parser": "7.28.0",
     "@commitlint/cli": "19.8.1",
     "@commitlint/config-conventional": "19.8.1",
     "@db-ux/db-theme": "4.0.0",
     "@double-great/stylelint-a11y": "3.0.4",
     "@guidepup/guidepup": "0.24.0",
-    "@guidepup/playwright": "^0.14.2",
-    "@guidepup/record": "^0.1.0",
-    "@guidepup/setup": "^0.19.3",
+    "@guidepup/playwright": "0.14.2",
+    "@guidepup/record": "0.1.0",
+    "@guidepup/setup": "0.19.3",
     "@playwright/experimental-ct-core": "1.54.1",
     "@playwright/experimental-ct-react": "1.54.1",
     "@playwright/experimental-ct-vue": "1.54.1",
     "@playwright/test": "1.54.1",
-    "accessibility-checker": "^4.0.6",
+    "accessibility-checker": "4.0.6",
     "adm-zip": "0.5.16",
-    "commander": "^14.0.0",
+    "commander": "14.0.0",
     "cpr": "3.0.1",
-    "cross-env": "^7.0.3",
-    "dotenv": "^17.2.0",
-    "eslint": "^9.29.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-config-xo": "^0.47.0",
-    "eslint-plugin-prettier": "^5.5.3",
-    "find-versions": "^6.0.0",
-    "glob": "^11.0.3",
+    "cross-env": "7.0.3",
+    "dotenv": "17.2.0",
+    "eslint": "9.29.0",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-config-xo": "0.47.0",
+    "eslint-plugin-prettier": "5.5.3",
+    "find-versions": "6.0.0",
+    "glob": "11.0.3",
     "http-server": "14.1.1",
-    "husky": "^9.1.7",
-    "jscpd": "^4.0.5",
-    "lint-staged": "^16.1.2",
-    "markdownlint-cli": "^0.45.0",
+    "husky": "9.1.7",
+    "jscpd": "4.0.5",
+    "lint-staged": "16.1.2",
+    "markdownlint-cli": "0.45.0",
     "ng-packagr": "19.2.2",
     "npm-run-all2": "8.0.4",
     "playwright": "1.54.1",
     "playwright-core": "1.54.1",
-    "postcss": "^8.5.6",
-    "postcss-cli": "^11.0.1",
+    "postcss": "8.5.6",
+    "postcss-cli": "11.0.1",
     "prettier": "3.6.2",
     "prettier-plugin-organize-imports": "4.1.0",
     "prettier-plugin-pkg": "0.21.2",
-    "replace-in-file": "^8.3.0",
+    "replace-in-file": "8.3.0",
     "rimraf": "6.0.1",
-    "rxjs": "~7.8.2",
+    "rxjs": "7.8.2",
     "stylelint": "16.22.0",
     "stylelint-config-recommended-scss": "15.0.1",
     "stylelint-config-standard": "38.0.0",
     "stylelint-use-logical": "2.1.2",
-    "tslib": "^2.8.1",
-    "tsx": "^4.20.3",
-    "typescript": "^5.8.3",
-    "validate-branch-name": "^1.3.2",
+    "tslib": "2.8.1",
+    "tsx": "4.20.3",
+    "typescript": "5.8.3",
+    "validate-branch-name": "1.3.2",
     "vite": "6.3.5",
-    "vitest": "^3.2.4",
+    "vitest": "3.2.4",
     "xo": "1.2.1",
-    "zone.js": "~0.15.1"
+    "zone.js": "0.15.1"
   },
   "overrides": {
-    "brace-expansion": "^2.0.2",
-    "cross-spawn": "~7.0.5",
+    "brace-expansion": "2.0.2",
+    "cross-spawn": "7.0.6",
     "vite": "6.3.5"
   },
   "validate-branch-name": {
