--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -50,11 +50,11 @@
     "@builder.io/mitosis-cli": "0.10.0",
     "@typescript-eslint/eslint-plugin": "8.37.0",
     "cpr": "3.0.1",
-    "cssnano": "^7.1.0",
-    "hygen": "^6.2.11",
+    "cssnano": "7.1.0",
+    "hygen": "6.2.11",
     "nodemon": "3.1.10",
     "sass": "1.85.0",
-    "tsx": "^4.20.3"
+    "tsx": "4.20.3"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
