--- a/packages/foundations/package.json
+++ b/packages/foundations/package.json
@@ -49,15 +49,15 @@
     "@db-ux/icon-font-tools": "0.3.4",
     "@playwright/test": "1.54.1",
     "cpr": "3.0.1",
-    "cssnano": "^7.1.0",
-    "dotenv": "^17.2.0",
+    "cssnano": "7.1.0",
+    "dotenv": "17.2.0",
     "glob": "11.0.3",
     "nodemon": "3.1.10",
-    "prettier": "^3.6.2",
+    "prettier": "3.6.2",
     "sass": "1.85.0",
-    "tsx": "^4.20.3",
-    "typescript": "^5.8.3",
-    "vite": "^6.3.5"
+    "tsx": "4.20.3",
+    "typescript": "5.8.3",
+    "vite": "6.3.5"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
