--- a/scripts/package.json
+++ b/scripts/package.json
@@ -70,12 +70,12 @@
   },
   "devDependencies": {
     "@inquirer/prompts": "7.6.0",
-    "dotenv": "^17.2.0",
-    "find-versions": "^6.0.0",
-    "glob": "^11.0.3",
-    "inquirer": "^12.7.0",
-    "replace-in-file": "^8.3.0",
-    "tar": "^7.4.3",
-    "vitest": "^3.2.4"
+    "dotenv": "17.2.0",
+    "find-versions": "6.0.0",
+    "glob": "11.0.3",
+    "inquirer": "12.7.0",
+    "replace-in-file": "8.3.0",
+    "tar": "7.4.3",
+    "vitest": "3.2.4"
   }
 }
