--- a/showcases/patternhub/package.json
+++ b/showcases/patternhub/package.json
@@ -24,30 +24,30 @@
   },
   "dependencies": {
     "dompurify": "3.2.6",
-    "highlight.js": "^11.11.1",
+    "highlight.js": "11.11.1",
     "next": "15.4.2",
     "react": "18.3.1",
-    "react-archer": "^4.4.0",
+    "react-archer": "4.4.0",
     "react-dom": "18.3.1",
     "rehype-slug": "6.0.0",
     "remark-gfm": "4.0.1"
   },
   "devDependencies": {
-    "@mdx-js/loader": "^3.1.0",
-    "@mdx-js/react": "^3.1.0",
-    "@next/mdx": "^15.4.2",
+    "@mdx-js/loader": "3.1.0",
+    "@mdx-js/react": "3.1.0",
+    "@next/mdx": "15.4.2",
     "@types/dompurify": "3.2.0",
-    "@types/node": "24.0.14",
+    "@types/node": "24.0.8",
     "@types/react": "18.3.13",
     "@types/react-dom": "18.3.1",
     "esbuild": "0.25.6",
     "eslint": "8.57.1",
     "eslint-config-next": "15.4.2",
-    "iframe-resizer": "^5.4.7",
-    "open-cli": "^8.0.0",
-    "prettier": "^3.5.3",
+    "iframe-resizer": "5.4.7",
+    "open-cli": "8.0.0",
+    "prettier": "3.6.2",
     "sass": "1.85.0",
     "typescript": "5.8.3",
-    "unist-util-visit": "^5.0.0"
+    "unist-util-visit": "5.0.0"
   }
 }
