--- a/showcases/stencil-showcase/package.json
+++ b/showcases/stencil-showcase/package.json
@@ -20,9 +20,9 @@
   },
   "devDependencies": {
     "npm-run-all2": "8.0.4",
-    "typescript": "^5.8.3"
+    "typescript": "5.8.3"
   },
   "overrides": {
-    "cross-spawn": "~7.0.5"
+    "cross-spawn": "7.0.6"
   }
 }
