--- a/output/stencil/package.json
+++ b/output/stencil/package.json
@@ -17,12 +17,14 @@
     }
   },
   "files": [
-    "dist/"
+    "dist/",
+    "docs/"
   ],
   "scripts": {
     "build": "stencil build",
     "build:cem": "cem analyze",
     "mv:dist": "cpr dist ../../build-outputs/wc-core-components/dist -o",
+    "mv:docs": "cpr docs ../../build-outputs/wc-core-components/docs -o",
     "mv:package.json": "cpr package.json ../../build-outputs/wc-core-components/package.json -o",
     "mv:readme": "cpr README.md ../../build-outputs/wc-core-components/README.md -o",
     "postbuild": "npm-run-all -p build:* -p mv:*",
