--- a/scripts/package.json
+++ b/scripts/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "description": "contains scripts for monorepo",
   "scripts": {
-    "build": "npm-run-all build:foundations build:components build:migration build:stylelint",
+    "build": "npm-run-all build:foundations build:components -p build:migration build:stylelint build:docs-cli",
     "build-outputs": "npm-run-all -p build-outputs:*",
     "build-outputs:components": "npm run copy-output --workspace=@db-ux/core-components",
     "build-outputs:foundations": "npm run copy-build --workspace=@db-ux/core-foundations",
@@ -25,15 +25,15 @@
     "build-showcases:stencil": "npm run build --workspace=stencil-showcase",
     "build-showcases:vue": "npm run build --workspace=vue-showcase",
     "build:components": "npm run build --workspace=@db-ux/core-components",
+    "build:docs-cli": "npm run build --workspace=@db-ux/docs-cli",
     "build:foundations": "npm run build --workspace=@db-ux/core-foundations",
     "build:migration": "npm run build --workspace=@db-ux/core-migration",
     "build:stylelint": "npm run build --workspace=@db-ux/core-stylelint",
-    "copilot": "npm-run-all copilot:typedoc copilot:mitosis-snippets copilot:extract-css copilot:merge-docs copilot:generate-instructions",
-    "copilot:extract-css": "node documentation/extract-css-vars.js",
-    "copilot:generate-instructions": "node documentation/generate-copilot-instructions.js",
-    "copilot:merge-docs": "node documentation/merge-component-docs.js && rimraf docs/api/README.md",
-    "copilot:mitosis-snippets": "npm run generate:mitosis-snippets --workspace=@db-ux/core-components",
-    "copilot:typedoc": "typedoc --options typedoc.json --tsconfig tsconfig.typedoc.json",
+    "copilot": "npm-run-all -p copilot:00_* copilot:merge-docs",
+    "copilot:00_extract-css": "tsx documentation/extract-css-vars.ts",
+    "copilot:00_mitosis-snippets": "npm run generate:mitosis-snippets --workspace=@db-ux/core-components",
+    "copilot:00_typedoc": "typedoc --options typedoc.json --tsconfig tsconfig.typedoc.json",
+    "copilot:merge-docs": "tsx documentation/merge-component-docs.ts",
     "dev": "tsx dev.js",
     "dev:angular-components": "npm run dev:angular --workspace=@db-ux/core-components",
     "dev:plain-html-components": "npm run dev:html --workspace=@db-ux/core-components",
@@ -83,6 +83,7 @@
     "glob": "^11.0.2",
     "inquirer": "^12.6.3",
     "replace-in-file": "^8.3.0",
+    "sassdoc": "2.7.4",
     "typedoc": "^0.28.5",
     "typedoc-plugin-markdown": "^4.6.4",
     "typedoc-plugin-merge-modules": "^7.0.0"
