--- a/.github/workflows/01-build-packages.yml
+++ b/.github/workflows/01-build-packages.yml
@@ -48,6 +48,12 @@ jobs:
           name: db-ux-stylelint-build
           path: packages/stylelint/build
 
+      - name: ⏫ Upload docs-cli build
+        uses: actions/upload-artifact@v4
+        with:
+          name: db-ux-docs-cli-build
+          path: packages/docs-cli/build
+
       - name: 💀 Killing me softly
         uses: ./.github/actions/cancel-workflow
         if: failure()
