--- a/output/angular/package.json
+++ b/output/angular/package.json
@@ -10,9 +10,15 @@
   "main": "dist/fesm5.js",
   "module": "dist/fesm5.js",
   "types": "dist/core.d.ts",
+  "files": [
+    "dist/",
+    "docs/"
+  ],
   "scripts": {
     "build": "ng build",
+    "mv:docs": "cpr docs ../../build-outputs/angular/docs -o",
     "ng": "ng",
+    "postbuild": "npm-run-all -p mv:*",
     "start": "ng serve"
   },
   "devDependencies": {
