fix: issues with extract-css-vars.ts

--- a/scripts/package.json
+++ b/scripts/package.json
@@ -29,11 +29,10 @@
     "build:foundations": "npm run build --workspace=@db-ux/core-foundations",
     "build:migration": "npm run build --workspace=@db-ux/core-migration",
     "build:stylelint": "npm run build --workspace=@db-ux/core-stylelint",
-    "copilot": "npm-run-all -p copilot:00_* copilot:merge-docs",
+    "copilot": "npm-run-all -p copilot:00_*",
     "copilot:00_extract-css": "tsx documentation/extract-css-vars.ts",
     "copilot:00_mitosis-snippets": "npm run generate:mitosis-snippets --workspace=@db-ux/core-components",
     "copilot:00_typedoc": "typedoc --options typedoc.json --tsconfig tsconfig.typedoc.json",
-    "copilot:merge-docs": "tsx documentation/merge-component-docs.ts",
     "dev": "tsx dev.js",
     "dev:angular-components": "npm run dev:angular --workspace=@db-ux/core-components",
     "dev:plain-html-components": "npm run dev:html --workspace=@db-ux/core-components",
@@ -41,6 +40,7 @@
     "dev:sass": "npm run dev:scss --workspace=@db-ux/core-components",
     "dev:stencil-components": "npm run dev:stencil --workspace=@db-ux/core-components",
     "dev:vue-components": "npm run dev:vue --workspace=@db-ux/core-components",
+    "postcopilot": "tsx documentation/merge-component-docs.ts",
     "rm-builds:components-build": "rimraf ../packages/components/build",
     "rm-builds:dist": "rimraf --glob showcases/**/dist",
     "rm-builds:foundations-build": "rimraf ../packages/foundations/build",
