--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -17,7 +17,7 @@ concurrency:
     }}
   cancel-in-progress: >-
     ${{
-      github.actor == 'dependabot[bot]' ||
+      github.actor != 'dependabot[bot]' &&
       github.ref != 'refs/heads/main'
     }}
 
