--- a/.github/workflows/01-lint.yml
+++ b/.github/workflows/01-lint.yml
@@ -14,6 +14,13 @@ jobs:
       - name: 🔄 Init Cache
         uses: ./.github/actions/npm-cache
 
+      - name: 📖 Check spelling
+        uses: codespell-project/actions-codespell@v2
+        with:
+          skip: "*.lock,*.json,node_modules,.git,__snapshots__"
+          ignore_words_list: "moz,webkit"
+          check_filenames: true
+
       - name: ⚡ Run Lint
         run: |
           npm run postinstall --workspace=nuxt-showcase
