--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -2,6 +2,4 @@
 
 # see https://docs.github.com/en/free-pro-team@latest/github/creating-cloning-and-archiving-repositories/about-code-owners for details of syntax
 
-# codespell:ignore merget
-
-- maximilian.franzke@deutschebahn.com nicolas.merget@deutschebahn.com anna.schoderer@deutschebahn.com bruno.schadeck@deutschebahn.com
+- maximilian.franzke@deutschebahn.com nicolas.merget@deutschebahn.com anna.schoderer@deutschebahn.com bruno.schadeck@deutschebahn.com # codespell:ignore merget
