--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
     "clean": "git clean -dfx --exclude=.env",
     "codestyle": "prettier . --write",
     "commit:updated-snapshots": "git diff --name-only --diff-filter=M | xargs git add && git commit --message 'test: updated snapshots'",
-    "copilot": "npm run copilot --workspace=scripts",
     "dev": "npm run dev --workspace=scripts",
+    "generate:agent": "npm run agent --workspace=scripts",
     "generate:component": "npm run generate:component --workspace=@db-ux/core-components",
     "lint": "npm-run-all --parallel lint:*",
     "lint:jscpd": "jscpd . --exitCode 1 --config .config/.jscpd.json",
