--- a/scripts/package.json
+++ b/scripts/package.json
@@ -4,7 +4,11 @@
   "type": "module",
   "description": "contains scripts for monorepo",
   "scripts": {
-    "build": "npm-run-all build:foundations build:components -p build:migration build:stylelint build:docs-cli",
+    "agent": "npm-run-all -p agent:00_*",
+    "agent:00_extract-css": "tsx documentation/extract-css-vars.ts",
+    "agent:00_mitosis-agent": "npm run generate:agent --workspace=@db-ux/core-components",
+    "agent:x00_typedoc": "typedoc --options typedoc.json --tsconfig tsconfig.typedoc.json",
+    "build": "npm-run-all build:foundations build:components -p build:migration build:stylelint build:agent-cli",
     "build-outputs": "npm-run-all --parallel build-outputs:*",
     "build-outputs:components": "npm run copy-output --workspace=@db-ux/core-components",
     "build-outputs:foundations": "npm run copy-build --workspace=@db-ux/core-foundations",
@@ -24,15 +28,11 @@
     "build-showcases:react": "npm run build --workspace=react-showcase",
     "build-showcases:stencil": "npm run build --workspace=stencil-showcase",
     "build-showcases:vue": "npm run build --workspace=vue-showcase",
+    "build:agent-cli": "npm run build --workspace=@db-ux/agent-cli",
     "build:components": "npm run build --workspace=@db-ux/core-components",
-    "build:docs-cli": "npm run build --workspace=@db-ux/docs-cli",
     "build:foundations": "npm run build --workspace=@db-ux/core-foundations",
     "build:migration": "npm run build --workspace=@db-ux/core-migration",
     "build:stylelint": "npm run build --workspace=@db-ux/core-stylelint",
-    "copilot": "npm-run-all -p copilot:00_*",
-    "copilot:00_extract-css": "tsx documentation/extract-css-vars.ts",
-    "copilot:00_mitosis-snippets": "npm run generate:mitosis-snippets --workspace=@db-ux/core-components",
-    "copilot:x00_typedoc": "typedoc --options typedoc.json --tsconfig tsconfig.typedoc.json",
     "dev": "tsx dev.js",
     "dev:angular-components": "npm run dev:angular --workspace=@db-ux/core-components",
     "dev:plain-html-components": "npm run dev:html --workspace=@db-ux/core-components",
@@ -40,7 +40,7 @@
     "dev:sass": "npm run dev:scss --workspace=@db-ux/core-components",
     "dev:stencil-components": "npm run dev:stencil --workspace=@db-ux/core-components",
     "dev:vue-components": "npm run dev:vue --workspace=@db-ux/core-components",
-    "postcopilot": "tsx documentation/merge-component-docs.ts",
+    "postagent": "tsx documentation/merge-component-docs.ts",
     "rm-builds:components-build": "rimraf ../packages/components/build",
     "rm-builds:dist": "rimraf --glob showcases/**/dist",
     "rm-builds:foundations-build": "rimraf ../packages/foundations/build",
@@ -70,6 +70,7 @@
     "start-showcase:vue": "npm run dev --workspace=vue-showcase",
     "start:foundations": "npm run start --workspace=@db-ux/core-foundations",
     "test": "npm-run-all --parallel test:*",
+    "test:agent-cli": "npm run test --workspace=@db-ux/agent-cli",
     "test:migration": "npm run test --workspace=@db-ux/core-migration",
     "test:scripts": "vitest run --config vitest.config.ts",
     "update:icon-fonts": "npm-run-all generate:icon-fonts generate:icon-types"
