--- a/output/vue/package.json
+++ b/output/vue/package.json
@@ -24,14 +24,14 @@
   },
   "files": [
     "dist/",
-    "docs/"
+    "agent"
   ],
   "scripts": {
     "build": "npm-run-all build:*",
     "build:01_vite": "vite build",
     "build:02_types": "vue-tsc --declaration --emitDeclarationOnly",
     "mv:dist": "cpr dist ../../build-outputs/vue/dist --overwrite",
-    "mv:docs": "cpr docs ../../build-outputs/vue/docs -o",
+    "mv:agent": "cpr agent ../../build-outputs/vue/agent -o",
     "mv:package.json": "cpr package.json ../../build-outputs/vue/package.json --overwrite",
     "mv:readme": "cpr README.md ../../build-outputs/vue/README.md --overwrite",
     "postbuild": "npm-run-all --parallel mv:*",
