--- a/packages/agent-cli/package.json
+++ b/packages/agent-cli/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "@db-ux/docs-cli",
+  "name": "@db-ux/agent-cli",
   "version": "0.0.0",
   "type": "module",
-  "description": "Cli to copy documentation for the DB UX Design System to use it for AI agents.",
+  "description": "CLI for DB UX Design System generate AI agent instructions",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/db-ux-design-system/core-web.git"
   },
   "license": "Apache-2.0",
   "bin": {
-    "@db-uxdocs-cli": "build/index.js"
+    "@db-uxagent-cli": "build/index.js"
   },
   "main": "build.js",
   "files": [
@@ -18,11 +18,11 @@
   "scripts": {
     "build": "node esbuild.js",
     "copy-build": "npm-run-all copy-build:*",
-    "copy-build:build": "cpr build ../../build-outputs/docs-cli/build -o",
-    "copy-build:package.json": "cpr package.json ../../build-outputs/docs-cli/package.json -o",
-    "copy-build:readme": "cpr README.md ../../build-outputs/docs-cli/README.md -o",
+    "copy-build:build": "cpr build ../../build-outputs/agent-cli/build -o",
+    "copy-build:package.json": "cpr package.json ../../build-outputs/agent-cli/package.json -o",
+    "copy-build:readme": "cpr README.md ../../build-outputs/agent-cli/README.md -o",
     "test": "vitest run --config vitest.config.ts",
-    "test:cli": "tsx src/cli.ts"
+    "test:cli": "tsx src/cli.ts --help"
   },
   "dependencies": {
     "commander": "^14.0.0",
