--- a/packages/foundations/package.json
+++ b/packages/foundations/package.json
@@ -12,9 +12,9 @@
   "types": "./build/index.d.ts",
   "module": "./build/index.js",
   "files": [
+    "agent",
     "assets",
-    "build",
-    "docs"
+    "build"
   ],
   "scripts": {
     "build": "npm-run-all build:*",
@@ -28,8 +28,8 @@
     "build:06_ts": "tsc",
     "clean": "rm --recursive --force build",
     "copy-build": "npm-run-all copy-build:*",
+    "copy-build:agent": "cpr agent ../../build-outputs/foundations/agent -o",
     "copy-build:assets": "cpr assets ../../build-outputs/foundations/assets --overwrite",
-    "copy-build:docs": "cpr docs ../../build-outputs/foundations/docs -o",
     "copy-build:package.json": "cpr package.json ../../build-outputs/foundations/package.json --overwrite",
     "copy-build:readme": "cpr README.md ../../build-outputs/foundations/README.md --overwrite",
     "copy-build:web": "cpr build ../../build-outputs/foundations/build --overwrite",
