--- a/package.json
+++ b/package.json
@@ -14,15 +14,7 @@
   "author": "DB Systel GmbH",
   "license": "Apache-2.0",
   "private": true,
-  "workspaces": [
-    "packages/*",
-    "output/*",
-    "showcases/*",
-    "docs",
-    "scripts",
-    "e2e"
-  ],
-  "packageManager": "npm@11.4.2",
+  "packageManager": "pnpm@9.14.4",
   "keywords": [
     "design-system",
     "ui-library",
@@ -46,25 +38,25 @@
     "styleguide"
   ],
   "scripts": {
-    "build": "npm run build --workspace=scripts",
-    "build-outputs": "npm run build-outputs --workspace=scripts",
-    "build-showcases": "npm run build-showcases --workspace=scripts",
+    "build": "pnpm run build --filter=scripts",
+    "build-outputs": "pnpm run build-outputs --filter=scripts",
+    "build-showcases": "pnpm run build-showcases --filter=scripts",
     "clean": "git clean -dfx --exclude=.env",
     "codestyle": "prettier . --write",
     "commit:updated-snapshots": "git diff --name-only --diff-filter=M | xargs git add && git commit --message 'test: updated snapshots'",
-    "dev": "npm run dev --workspace=scripts",
-    "generate:component": "npm run generate:component --workspace=@db-ux/core-components",
-    "lint": "npm-run-all --parallel lint:*",
+    "dev": "pnpm run dev --filter=scripts",
+    "generate:component": "pnpm run generate:component --filter=@db-ux/core-components",
+    "lint": "pnpm --parallel run '/^lint:[^:]*$/'",
     "lint:jscpd": "jscpd . --exitCode 1 --config .config/.jscpd.json",
     "lint:markdownlint": "markdownlint --config .config/.markdown-lint.yml **/*.md",
     "lint:stylelint": "stylelint **/*.{css,scss}",
     "lint:xo": "xo",
     "prepare": "husky",
-    "regenerate:screenshots": "npm run build && npm run build --workspace=react-showcase && docker-compose --file ./e2e/docker-compose.regenerate.yml up",
-    "regenerate:screenshots:rebuild": "npm run rm:builds && node scripts/rebuild-e2e.js",
-    "rm:builds": "npm run rm:builds --workspace=scripts",
-    "start": "npm run start --workspace=patternhub",
-    "test": "npm run test --workspace=scripts",
+    "regenerate:screenshots": "pnpm run build && pnpm run build --filter=react-showcase && docker-compose --file ./e2e/docker-compose.regenerate.yml up",
+    "regenerate:screenshots:rebuild": "pnpm run rm:builds && node scripts/rebuild-e2e.js",
+    "rm:builds": "pnpm run rm:builds --filter=scripts",
+    "start": "pnpm run start --filter=patternhub",
+    "test": "pnpm run test --filter=scripts",
     "test:react-core-components": "playwright test --config output/react/playwright.config.ts --ui",
     "test:vue-components": "playwright test --config output/vue/playwright.config.ts --ui",
     "update:dependency:playwright": "node scripts/github/update-playwright.js"
