--- a/packages/foundations/package.json
+++ b/packages/foundations/package.json
@@ -16,8 +16,8 @@
     "build"
   ],
   "scripts": {
-    "build": "npm-run-all build:*",
-    "build:01_normalize": "npm-run-all copy-prepare:*",
+    "build": "pnpm run '/^build:[^:]*$/'",
+    "build:01_normalize": "pnpm run '/^copy-prepare:[^:]*$/'",
     "build:02_copy": "npm run copy:scss",
     "build:03_css": "sass --no-source-map --load-path=node_modules/ --load-path=../../node_modules/ build/styles  --fatal-deprecation=mixed-decls",
     "build:04_tailwind": "cpr tailwind build/tailwind --overwrite",
@@ -26,7 +26,7 @@
     "build:06_ide": "cpr ide build/ide --overwrite",
     "build:06_ts": "tsc",
     "clean": "rm --recursive --force build",
-    "copy-build": "npm-run-all copy-build:*",
+    "copy-build": "pnpm run '/^copy-build:[^:]*$/'",
     "copy-build:assets": "cpr assets ../../build-outputs/foundations/assets --overwrite",
     "copy-build:package.json": "cpr package.json ../../build-outputs/foundations/package.json --overwrite",
     "copy-build:readme": "cpr README.md ../../build-outputs/foundations/README.md --overwrite",
@@ -37,9 +37,9 @@
     "dev": "vite --open",
     "generate:fonts": "tsx assets/fonts/generate-eu-fonts.ts",
     "generate:icons": "tsx scripts/local/generate-icon-font.ts",
-    "prebuild": "npm-run-all copy-prepare:*",
-    "predev": "npm-run-all copy-prepare:*",
-    "prestart": "npm-run-all copy-prepare:*",
+    "prebuild": "pnpm run '/^copy-prepare:[^:]*$/'",
+    "predev": "pnpm run '/^copy-prepare:[^:]*$/'",
+    "prestart": "pnpm run '/^copy-prepare:[^:]*$/'",
     "regenerate:screenshots": "npx playwright test --config ./test/playwright.config.js --update-snapshots",
     "start": "nodemon --config nodemon.json",
     "test:e2e": "npx playwright test --config=./test/playwright.config.js"
