--- a/scripts/package.json
+++ b/scripts/package.json
@@ -5,7 +5,7 @@
   "description": "contains scripts for monorepo",
   "scripts": {
     "build": "npm-run-all build:foundations build:components build:migration build:stylelint",
-    "build-outputs": "npm-run-all --parallel build-outputs:*",
+    "build-outputs": "pnpm --parallel run '/^build-outputs:[^:]*$/'",
     "build-outputs:components": "npm run copy-output --workspace=@db-ux/core-components",
     "build-outputs:foundations": "npm run copy-build --workspace=@db-ux/core-foundations",
     "build-outputs:migration": "npm run copy-build --workspace=@db-ux/core-migration",
@@ -15,7 +15,7 @@
     "build-outputs:stylelint": "npm run copy-output --workspace=@db-ux/core-stylelint",
     "build-outputs:v-core-components": "npm run build --workspace=@db-ux/v-core-components",
     "build-outputs:wc-core-components": "npm run build --workspace=@db-ux/wc-core-components",
-    "build-showcases": "npm-run-all --parallel build-showcases:*",
+    "build-showcases": "pnpm --parallel run '/^build-showcases:[^:]*$/'",
     "build-showcases:angular": "npm run build --workspace=angular-showcase",
     "build-showcases:angular-ssr": "npm run build --workspace=angular-ssr-showcase",
     "build-showcases:next": "npm run build --workspace=next-showcase",
@@ -53,7 +53,7 @@
     "rm-builds:patternhub-src-tsx": "rimraf --glob ../showcases/patternhub/components/src/**/*.tsx",
     "rm-builds:playwright": "rimraf --glob output/react/playwright",
     "rm-builds:showcases-build": "rimraf --glob  build-showcases/**",
-    "rm:builds": "npm-run-all --parallel rm-builds:*",
+    "rm:builds": "pnpm --parallel run '/^rm-builds:[^:]*$/'",
     "start-showcase:angular": "npm run dev --workspace=angular-showcase",
     "start-showcase:angular-ssr": "npm run dev --workspace=angular-ssr-showcase",
     "start-showcase:next": "npm run dev --workspace=next-showcase",
@@ -63,7 +63,7 @@
     "start-showcase:stencil": "npm run dev --workspace=stencil-showcase",
     "start-showcase:vue": "npm run dev --workspace=vue-showcase",
     "start:foundations": "npm run start --workspace=@db-ux/core-foundations",
-    "test": "npm-run-all --parallel test:*",
+    "test": "pnpm --parallel run '/^test:[^:]*$/'",
     "test:migration": "npm run test --workspace=@db-ux/core-migration",
     "test:scripts": "vitest run --config vitest.config.ts",
     "update:icon-fonts": "npm-run-all generate:icon-fonts generate:icon-types"
