--- a/showcases/react-showcase/package.json
+++ b/showcases/react-showcase/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "build": "npm-run-all build:*",
+    "build": "pnpm run '/^build:[^:]*$/'",
     "build:01_tsc": "tsc",
     "build:02_vite": "vite build",
     "dev": "vite --open",
