--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
     "styleguide"
   ],
   "scripts": {
-    "build": "pnpm run build --filter=scripts",
-    "build-outputs": "pnpm run build-outputs --filter=scripts",
-    "build-showcases": "pnpm run build-showcases --filter=scripts",
+    "build": "pnpm run build --filter='./packages/scripts'",
+    "build-outputs": "pnpm run build-outputs --filter='./packages/scripts'",
+    "build-showcases": "pnpm run build-showcases --filter='./packages/scripts'",
     "clean": "git clean -dfx --exclude=.env",
     "codestyle": "prettier . --write",
     "commit:updated-snapshots": "git diff --name-only --diff-filter=M | xargs git add && git commit --message 'test: updated snapshots'",
-    "dev": "pnpm run dev --filter=scripts",
+    "dev": "pnpm run dev --filter='./packages/scripts'",
     "generate:component": "pnpm run generate:component --filter=@db-ux/core-components",
     "lint": "pnpm --parallel run '/^lint:[^:]*$/'",
     "lint:jscpd": "jscpd . --exitCode 1 --config .config/.jscpd.json",
@@ -54,9 +54,9 @@
     "prepare": "husky",
     "regenerate:screenshots": "pnpm run build && pnpm run build --filter=react-showcase && docker-compose --file ./e2e/docker-compose.regenerate.yml up",
     "regenerate:screenshots:rebuild": "pnpm run rm:builds && node scripts/rebuild-e2e.js",
-    "rm:builds": "pnpm run rm:builds --filter=scripts",
+    "rm:builds": "pnpm run rm:builds --filter='./packages/scripts'",
     "start": "pnpm run start --filter=patternhub",
-    "test": "pnpm run test --filter=scripts",
+    "test": "pnpm run test --filter='./packages/scripts'",
     "test:react-core-components": "playwright test --config output/react/playwright.config.ts --ui",
     "test:vue-components": "playwright test --config output/vue/playwright.config.ts --ui",
     "update:dependency:playwright": "node scripts/github/update-playwright.js"
