--- a/docs/package.json
+++ b/docs/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@db-ux/docs",
+  "private": true,
   "version": "0.0.0",
   "type": "module",
   "description": "Docs folder for DB UX Design System (Version 3).",
