--- a/packages/foundations/package.json
+++ b/packages/foundations/package.json
@@ -37,6 +37,7 @@
     "dev": "vite --open",
     "generate:fonts": "tsx assets/fonts/generate-eu-fonts.ts",
     "generate:icons": "tsx scripts/local/generate-icon-font.ts",
+    "postcopy-prepare:icon-overview": "prettier dev/icons.html --write",
     "prebuild": "npm-run-all copy-prepare:*",
     "predev": "npm-run-all copy-prepare:*",
     "prestart": "npm-run-all copy-prepare:*",
