refactor: slight optimization

--- a/.github/workflows/01-lint.yml
+++ b/.github/workflows/01-lint.yml
@@ -18,7 +18,7 @@ jobs:
         uses: codespell-project/actions-codespell@v2
         with:
           skip: "*.lock,*.json,node_modules,.git,__snapshots__"
-          ignore_words_list: "moz,webkit"
+          ignore_words_file: .config/.codespellignorewords
           check_filenames: true
 
       - name: ⚡ Run Lint
