fix: issue with patternhub build

--- a/showcases/patternhub/tsconfig.json
+++ b/showcases/patternhub/tsconfig.json
@@ -17,7 +17,11 @@
 		"noUnusedLocals": false,
 		"noUnusedParameters": false,
 		"jsx": "preserve",
-		"incremental": true
+		"incremental": true,
+		"paths": {
+			"@components": ["../../output/react/src"],
+			"@components/src/*": ["../../output/react/src/*"]
+		}
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
 	"exclude": ["node_modules"]
