--- a/showcases/next-showcase/tsconfig.json
+++ b/showcases/next-showcase/tsconfig.json
@@ -14,7 +14,11 @@
 		"jsx": "preserve",
 		"strictNullChecks": true,
 		"downlevelIteration": true,
-		"target": "ES2017"
+		"target": "ES2017",
+		"paths": {
+			"@components": ["../../output/react/src"],
+			"@components/src/*": ["../../output/react/src/*"]
+		}
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
 	"exclude": ["node_modules"]
