--- a/showcases/patternhub/data/components.json
+++ b/showcases/patternhub/data/components.json
@@ -1,8 +1,3 @@
-			{
-				"label": "TODO: Add to specific category; DBControlPanelMobile",
-				"name": "control-panel-mobile",
-			},
-
 [
 	{
 		"label": "Action",
@@ -25,8 +20,8 @@
 		"name": "data-display",
 		"subNavigation": [
 			{
-				"label": "DBBrand",
-				"name": "brand"
+				"label": "DBControlPanelBrand",
+				"name": "control-panel-brand"
 			},
 			{
 				"label": "DBTooltip",
@@ -140,8 +135,12 @@
 				"name": "drawer"
 			},
 			{
-				"label": "DBHeader",
-				"name": "header"
+				"label": "DBControlPanelDesktop",
+				"name": "control-panel-desktop"
+			},
+			{
+				"label": "DBControlPanelMobile",
+				"name": "control-panel-mobile"
 			},
 			{
 				"label": "DBSection",
